refactoring the ACL for a page from JSPWiki style to ElWiki; removed Acl manager.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Bearbeiten berechtigung
+acl.permission.submit.cancel = Abbrechen
+acl.permission.submit.save   = Speichern berechtigung
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Bitte best\u00E4tige das Abmelden!
 actions.creategroup         = Gruppe erstellen
 actions.creategroup.title   = Neue Gruppe anlegen
@@ -39,6 +49,7 @@ actions.logout.title        = Abmelden
 actions.more                = Weitere...
 actions.notcreated          = Diese Seite wurde noch nicht erstellt.
 actions.page                = Seite
+actions.page.acl            = Liste ACL
 actions.page.comment        = Kommentar hinzuf\u00FCgen
 actions.page.create         = Erstellen
 actions.page.delete         = L\u00F6schen
