--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Editar permiso
+acl.permission.submit.cancel = Cancelar
+acl.permission.submit.save   = Guardar permiso
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Por favor, confirme que desea cerrar la sesi\u00F3n.
 actions.creategroup         = Crear grupo
 actions.creategroup.title   = Crear nuevo grupo de autorizaci\u00F3n
@@ -39,6 +49,7 @@ actions.logout.title        = Desconectar
 actions.more                = M\u00E1s...
 actions.notcreated          = P\u00E1gina no creada todav\u00EDa.
 actions.page                = P\u00E1gina
+actions.page.acl            = Lista ACL
 actions.page.comment        = A\u00F1adir Comentario
 actions.page.create         = Crear
 actions.page.delete         = Eliminar
