--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Muokkaa lupa
+acl.permission.submit.cancel = Peruuta
+acl.permission.submit.save   = Tallentaa lupa
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Vahvista, ett\u00E4 haluat kirjautua ulos!
 actions.creategroup         = Luo uusi ryhm\u00E4
 actions.creategroup.title   = Luo uusi ryhm\u00E4
@@ -39,6 +49,7 @@ actions.logout.title        = Kirjaudu ulos
 actions.more                = Muut...
 actions.notcreated          = Sivua ei ole viel\u00E4 luotu
 actions.page                = Sivu
+actions.page.acl            = Luettelo ACL
 actions.page.comment        = Lis\u00E4\u00E4 kommentti
 actions.page.create         = Luoda
 actions.page.delete         = Poistaa
