--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fr.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Editer le permission
+acl.permission.submit.cancel = Abandonner
+acl.permission.submit.save   = Enregistrer permission
+
+#
+# Any actions.
+#
 actions.confirmlogout       = S'il vous pla\u00EEt confirmer que vous souhaitez vous d\u00E9connecter!
 actions.creategroup         = Cr\u00E9er un groupe
 actions.creategroup.title   = Cr\u00E9er un nouveau groupe d'autorisation
@@ -39,6 +49,7 @@ actions.logout.title        = Se d\u00E9connecter
 actions.more                = Plus...
 actions.notcreated          = Page pas encore cr\u00E9\u00E9e.
 actions.page                = Page
+actions.page.acl            = Liste ACL
 actions.page.comment        = Ajouter un commentaire
 actions.page.create         = Cr\u00E9er
 actions.page.delete         = Supprimer
