--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Modifica il permesso
+acl.permission.submit.cancel = Annulla
+acl.permission.submit.save   = Salvare permesso
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Si prega di confermare che si desidera effettuare il logout!
 actions.creategroup         = Crea il gruppo
 actions.creategroup.title   = Crea un nuovo gruppo autorizzativo
@@ -39,6 +49,7 @@ actions.logout.title        = Log out
 actions.more                = Altro...
 actions.notcreated          = Pagina non ancora creata.
 actions.page                = Pagina
+actions.page.acl            = Elenco ACL
 actions.page.comment        = Aggiungi un commento
 actions.page.create         = Creare
 actions.page.delete         = Eliminare
