--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_nl.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Bewerk toestemming
+acl.permission.submit.cancel = Annuleer
+acl.permission.submit.save   = Opslaan toestemming
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Bevestig dat u wilt uitloggen!
 actions.creategroup         = Nieuwe Groep aanmaken
 actions.creategroup.title   = Nieuwe groep aanmaken
@@ -39,6 +49,7 @@ actions.logout.title        = Uitloggen
 actions.more                = Meer...
 actions.notcreated          = De pagina is nog niet aangemaakt.
 actions.page                = Pagina
+actions.page.acl            = Lijst ACL
 actions.page.comment        = Voeg een reactie toe
 actions.page.create         = Maken
 actions.page.delete         = Verwijderen
