--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Editar permiss\u00E3o
+acl.permission.submit.cancel = Cancel
+acl.permission.submit.save   = Salvar permiss\u00E3o
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Por favor, confirme que voc\u00EA deseja sair!
 actions.creategroup         = Criar grupo
 actions.creategroup.title   = Criar novo grupo de autoriza\u00E7\u00E3o
@@ -39,6 +49,7 @@ actions.logout.title        = Sair
 actions.more                = Mais...
 actions.notcreated          = P\u00E1gina ainda n\u00E3o criada.
 actions.page                = P\u00E1gina
+actions.page.acl            = Lista ACL
 actions.page.comment        = Adicionar coment\u00E1rio
 actions.page.create         = Criar
 actions.page.delete         = Excluir
