--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_ru.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_ru.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0440\u0430\u0437\u0440\u0435\u0448\u0435\u043D\u0438\u0435
+acl.permission.submit.cancel = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
+acl.permission.submit.save   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C permission
+
+#
+# Any actions.
+#
 actions.confirmlogout       = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435, \u0447\u0442\u043E \u0432\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043C\u044B!
 actions.creategroup         = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0433\u0440\u0443\u043F\u043F\u0443
 actions.creategroup.title   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u0443\u044E \u0433\u0440\u0443\u043F\u043F\u0443 (\u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u0443\u044E)
@@ -39,6 +49,7 @@ actions.logout.title        = \u0412\u044B\u0439\u0442\u0438
 actions.more                = \u0411\u043E\u043B\u044C\u0448\u0435...
 actions.notcreated          = \u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u0435\u0449\u0451 \u043D\u0435 \u0441\u043E\u0437\u0434\u0430\u043D\u0430.
 actions.page                = \u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+actions.page.acl            = \u0421\u043F\u0438\u0441\u043E\u043A ACL
 actions.page.comment        = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
 actions.page.create         = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 actions.page.delete         = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
