--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = \u7F16\u8F91\u6743\u9650
+acl.permission.submit.cancel = \u53D6\u6D88
+acl.permission.submit.save   = \u4FDD\u5B58\u6743\u9650
+
+#
+# Any actions.
+#
 actions.confirmlogout       = \u8BF7\u786E\u8BA4\u60A8\u8981\u6CE8\u9500!
 actions.creategroup         = \u521B\u5EFA\u7EC4
 actions.creategroup.title   = \u521B\u5EFA\u65B0\u6388\u6743\u7EC4
@@ -39,6 +49,7 @@ actions.logout.title        = \u6CE8\u9500
 actions.more                = \u66F4\u591A...
 actions.notcreated          = \u8FD8\u672A\u521B\u5EFA\u9875\u9762\u3002
 actions.page                = \u9875\u9762
+actions.page.acl            = \u540D\u5355 ACL
 actions.page.comment        = \u6DFB\u52A0\u6CE8\u91CA
 actions.page.create         = \u521B\u5EFA
 actions.page.delete         = \u5220\u9664
