added the checkAccess operation into AuthorizationManager.

--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle.properties
@@ -234,8 +234,8 @@ security.error.fullname.taken           = Someone with the name of ''{0}'' has a
 security.error.illegalfullname          = Full name ''{0}'' fails validation checks
 security.error.illegalloginname         = Login name ''{0}'' fails validation checks
 security.error.login.taken              = The login name ''{0}'' is already taken.
-security.error.noaccess                 = You don&#39;t have access to &#39;{0}&#39;. Please log in first.
-security.error.noaccess.logged          = You don&#39;t have access to &#39;{0}&#39;. Do you want to log in as another user?.
+security.error.pageaccess               = You don''t have access to the "{0}" page. Please log in first.
+security.error.pageaccess.logged        = You don''t have access to the "{0}" page. Do you want to log in as another user?
 security.error.passwordnomatch          = Passwords don&#39;t match
 security.error.wrongip                  = Attempt to post from a different IP address than where the page was originally fetched.
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -245,7 +245,7 @@ security.user.fullname.invalid          = Invalid Username
 security.user.loginname                 = Login name
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (none)
 userprofile.noroles  = (none)
