--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_de.properties
@@ -109,7 +109,7 @@ install.jsp.install.info                        = Gute Nachrichten:
 install.jsp.install.msg.admin.notexists         = Rufst du dieses Installationsprogramm zum ersten mal auf? Falls ja solltest du wissen, dass du Administratorrechte ben\u00F6tigst, um auf diese Seite erneut zugreifen zu k\u00F6nnen, nachdem JSPWiki einmal deine Konfigurationseinstellungen ausgewertet und gespeichert hat. Wir tun das um zu verhindern, dass beliebige Leute aus dem Internet b\u00F6se Dinge mit deinem Wiki anstellen k\u00F6nnen.
 install.jsp.install.msg.rnd.pwd                 = Da bisher noch kein Administratorzugang existiert hat, hat JSPWiki einen mit zuf\u00E4lligem Passwort f\u00FCr dich erstellt. Du kannst dieses Passwort nat\u00FCrlich sp\u00E4ter \u00E4ndern. Der Benutzername lautet {0} und das Passwort ist {1}. Bitte schreibe dir diese Zugangsdaten auf und bewahre sie an einem sicheren Platz auf. JSPWiki hat au\u00DFerdem eine Wiki-Gruppe {2} erstellt, die diesen Benutzer enth\u00E4lt.
 install.jsp.install.warning                     = Warnung:
-install.jsp.instr.desc                          = Wenn du auf 'Weiter' klickst, wird das Installationsprogramm deine Einstellungen in <code>{0}</code> abspeichern. Es wird au\u00DFerdem einen Administratorzugang mit einem zuf\u00E4lligen Passwort sowie eine entsprechende Admin-Gruppe erstellen.
+install.jsp.instr.desc                          = Wenn du auf ''Weiter'' klickst, wird das Installationsprogramm deine Einstellungen in <code>{0}</code> abspeichern. Es wird au\u00DFerdem einen Administratorzugang mit einem zuf\u00E4lligen Passwort sowie eine entsprechende Admin-Gruppe erstellen.
 install.jsp.instr.submit                        = Weiter
 install.jsp.intro.p1                            = Willkommen! Diese kleine Seite ist dazu da, Dir \u00FCber die ersten H\u00FCrden deiner JSPWiki-Installation hinwegzuhelfen. Wenn du diese Seite siehst, hast du JSPWiki bereits korrekt in deinem Container installiert.
 install.jsp.intro.p2                            = Es m\u00FCssen jetzt ein paar Dinge konfiguriert werden. Wenn du auf 'Weiter' klickst, wird die Datei <code>jspwiki.properties</code> aus der Distribution angepasst oder neu erstellt, falls sie nicht gefunden werden kann.
@@ -232,8 +232,8 @@ security.error.fullname.taken           = Jemand mit dem Namen ''{0}'' ist berei
 security.error.illegalfullname          = Der volle Name {0} ist ung\u00FCltig!
 security.error.illegalloginname         = Der Benutzername {0} ist ung\u00FCltig!
 security.error.login.taken              = Der Login Name ''{0}'' wird bereits verwendet.
-security.error.noaccess                 = Du hast keine Zugriffsberechtigung auf {0}. Bitte melde dich zuerst an!
-security.error.noaccess.logged          = Du hast keine Zugriffsberechtigung auf {0}. Willst du dich als anderer Benutzer anmelden?
+security.error.pageaccess               = Sie haben keinen zugriff auf die Seite "{0}" . Identifizieren sie sich zuerst.
+security.error.pageaccess.logged        = Sie haben keinen zugriff auf die "{0}"; seite. M\u00F6chten sie sich als anderer benutzer anmelden?
 security.error.passwordnomatch          = Die Passw\u00F6rter stimmen nicht \u00FCberein!
 security.error.wrongip                  = Deine IP-Adresse hat sich zwischenzeitlich ge\u00E4ndert! Es ist aus Sicherheitsgr\u00FCnden nicht erlaubt, von einer anderen IP-Adresse zu posten als der, von der aus die Seite geladen wurde.
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -243,7 +243,7 @@ security.user.fullname.invalid          = Ung\u00FCltiger Benutzername
 security.user.loginname                 = Benutzername
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (keine)
 userprofile.noroles  = (keine)
