--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_es.properties
@@ -234,8 +234,8 @@ security.error.fullname.taken           = El nombre completo ''{0}'' ya est\u00E
 security.error.illegalfullname          = El nombre completo ''{0}'' es ilegal
 security.error.illegalloginname         = El id. de acceso ''{0}'' es ilegal
 security.error.login.taken              = El id. de acceso ''{0}'' ya est\u00E1 en uso.
-security.error.noaccess                 = No tienes acceso a &#39;{0}&#39;. Identif\u00EDcate antes.
-security.error.noaccess.logged          = No tienes acceso a &#39;{0}&#39;. &#191;Quieres identificarte como otro usuario?.
+security.error.pageaccess               = No tiene acceso a la p\u00E1gina "{0}". Identif\u00EDquese primero.
+security.error.pageaccess.logged        = No tiene acceso a la p\u00E1gina "{0}". \u00BFQuieres iniciar sesi\u00F3n como otro usuario?
 security.error.passwordnomatch          = Las contrase\u00F1as no coinciden
 security.error.wrongip                  = Intento de publicaci\u00F3n desde una direcci\u00F3n IP distinta a de d\u00F3nde se recogi\u00F3 originalmente
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -245,7 +245,7 @@ security.user.fullname.invalid          = Nombre no v\u00E1lido
 security.user.loginname                 = Id. de acceso
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (ninguno)
 userprofile.noroles  = (ninguno)
