--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fi.properties
@@ -209,8 +209,8 @@ security.error.blankpassword            = Salasana ei voi olla tyhj\u00E4
 security.error.createprofilebeforelogin = Sinun on kirjauduttava ennen kuin luot profiilin
 security.error.illegalfullname          = Koko nimi &quot;{0}&quot; ei ole sallittu
 security.error.illegalloginname         = Kirjautumisnimi &quot;{0}&quot; ei ole sallittu
-security.error.noaccess                 = Sinulla ei ole p\u00E4\u00E4sy\u00E4 resurssiin &quot;{0}&quot;.  Ole hyv\u00E4, ja kirjaudu ensin sis\u00E4\u00E4n.
-security.error.noaccess.logged          = Sinulla ei ole p\u00E4\u00E4sy\u00E4 resurssiin &quot;{0}&quot;.  Haluatko kirjautua toisena k\u00E4ytt\u00E4j\u00E4n\u00E4?
+security.error.pageaccess               = Sinulla ei ole p\u00E4\u00E4sy\u00E4 "{0}" sivulle. Tunnistaudu ensin.
+security.error.pageaccess.logged        = Sinulla ei ole p\u00E4\u00E4sy\u00E4 "{0}" - sivulle. Haluatko kirjautua sis\u00E4\u00E4n toisena k\u00E4ytt\u00E4j\u00E4n\u00E4?
 security.error.passwordnomatch          = Salasanan varmistus ei t\u00E4sm\u00E4nnyt itse salasanan kanssa
 security.error.wrongip                  = Yritettiin l\u00E4hett\u00E4\u00E4 viesti eri osoitteesta kuin minne sivu alunperin oli l\u00E4hetetty!
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -220,7 +220,7 @@ security.user.fullname.invalid          = Ep\u00E4kelpo k\u00E4ytt\u00E4j\u00E4n
 security.user.loginname                 = K\u00E4ytt\u00E4j\u00E4tunus
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (tyhj\u00E4)
 userprofile.noroles  = (tyhj\u00E4)
