--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fr.properties
@@ -229,8 +229,8 @@ security.error.fullname.taken           = Quelqu'un avec l'identifiant ''{0}'' e
 security.error.illegalfullname          = Le nom complet &quot;{0}&quot; est ill\u00E9gal
 security.error.illegalloginname         = L''identifiant &quot;{0}&quot; est ill\u00E9gal
 security.error.login.taken              = L'identifiant ''{0}'' est d\u00E9j\u00E0 utilis\u00E9.
-security.error.noaccess                 = Vous n''avez pas acc\u00E8s \u00E0 &quot;{0}&quot;. Veuillez d''abord vous identifier.
-security.error.noaccess.logged          = Vous n''avez pas acc\u00E8s \u00E0 &quot;{0}&quot;. Voulez-vous vous identifier sous une autre identit\u00E9?
+security.error.pageaccess               = Vous n'avez pas acc\u00E8s \u00E0 la page "{0}". Identifiez-vous d'abord.
+security.error.pageaccess.logged        = Vous n''avez pas acc\u00E8s \u00E0 la page "{0}". Voulez-vous vous connecter en tant qu''autre utilisateur?
 security.error.passwordnomatch          = Les mots de passe ne correspondent pas.
 security.error.wrongip                  = Tentative de publier depuis une adresse IP diff\u00E9rente de celle utilis\u00E9e pour obtenir la page.
 # Ceux-ci devraient peu ou prou correspondre ? ce qui est utilise dans le default.properties pour UserProfile.jsp
@@ -240,7 +240,7 @@ security.user.fullname.invalid          = Nom invalide pour un utilisateur
 security.user.loginname                 = Identifiant
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (aucun)
 userprofile.noroles  = (aucun)
