--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_it.properties
@@ -218,8 +218,8 @@ security.error.fullname.taken           = Qualcuno con il nome ''{0}'' \u00E8 gi
 security.error.illegalfullname          = Il nome completo &quot;{0}&quot; non &grave; ammesso
 security.error.illegalloginname         = L'identificativo &quot;{0}&quot; non &grave; ammesso
 security.error.login.taken              = Il nome utente ''{0}'' \u00E8 gi\u00E0 utilizzato.
-security.error.noaccess                 = Non hai accesso a &#39;{0}&#39;. Per favore, autenticati.
-security.error.noaccess.logged          = Non hai accesso a &#39;{0}&#39;. Vuoi autenticarti con un altra utenza?.
+security.error.pageaccess               = Non hai accesso alla pagina "{0}". Identificatevi prima.
+security.error.pageaccess.logged        = Non hai accesso alla pagina "{0}". Vuoi autenticarti con un altra utenza?.
 security.error.passwordnomatch          = Le password non corrispondono
 security.error.wrongip                  = Tentativo di inviare dati da un indirizzo IP diverso da quello da cui la pagina &egrave; stata inizialmente caricata.
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -229,7 +229,7 @@ security.user.fullname.invalid          = Nome utente non valido.
 security.user.loginname                 = Identificativo
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (nessuno)
 userprofile.noroles  = (nessuno)
