--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_nl.properties
@@ -224,8 +224,8 @@ security.error.fullname.taken           = De volledige naam ''{0}'' is al in geb
 security.error.illegalfullname          = Ongeldige volledige naam "{0}"
 security.error.illegalloginname         = Ongeldige Login naam "{0}";
 security.error.login.taken              = De Login naam ''{0}'' is al in gebruik.
-security.error.noaccess                 = U heeft geen toegang naar &#39;{0}&#39;. Gelieve eerst in te loggen.
-security.error.noaccess.logged          = U heeft geen toegang naar &#39;{0}&#39;. Wilt U aanloggen als een andere user?
+security.error.pageaccess               = U heeft geen toegang tot de pagina "{0}". Identificeer jezelf eerst.
+security.error.pageaccess.logged        = U heeft geen toegang tot de pagina "{0}". Wilt u inloggen als een andere gebruiker?
 security.error.passwordnomatch          = Wachtwoord is onjuist.
 security.error.wrongip                  = Fout: IP adres is ongeldig
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -235,7 +235,7 @@ security.user.fullname.invalid          = Ongeldige Gebruikers Naam
 security.user.loginname                 = Login naam
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (geen)
 userprofile.noroles  = (geen)
