--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_pt_BR.properties
@@ -187,8 +187,8 @@ security.error.fullname.taken           = Algu\u00E9m com o nome ''{0}'' j\u00E1
 security.error.illegalfullname          = Nome completo &quot;{0}&quot; inv\u00E1lido
 security.error.illegalloginname         = Login &quot;{0}&quot; inv\u00E1lido
 security.error.login.taken              = O login ''{0}'' est\u00E1 sendo usado.
-security.error.noaccess                 = Voc\u00EA n\u00E3o tem acesso \u00E0 &#39;{0}&#39;. Por favor se autentique primeiro.
-security.error.noaccess.logged          = Voc\u00EA n\u00E3o tem acesso \u00E0 &#39;{0}&#39;. Voc\u00EA deseja entrar como outro usu\u00E1rio?.
+security.error.pageaccess               = Voc\u00EA n\u00E3o tem acesso \u00E0 p\u00E1gina "{0}". Identifique-se primeiro.
+security.error.pageaccess.logged        = Voc\u00EA n\u00E3o tem acesso \u00E0 p\u00E1gina "{0}". Deseja fazer login como outro usu\u00E1rio?
 security.error.passwordnomatch          = As senhas n\u00E3o s\u00E3o id\u00EAnticas
 security.error.wrongip                  = Tentativa de publicar vinda de um endere\u00E7o IP diferente ao do qual a p\u00E1gina foi originalente buscada.
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -198,7 +198,7 @@ security.user.fullname.invalid          = Nome inv\u00E1lido
 security.user.loginname                 = Login
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (nenhum)
 userprofile.noroles  = (nenhum)
