--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugin.bugreporthandler/OSGI-INF/l10n/bundle_it.properties
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugin.bugreporthandler/OSGI-INF/l10n/bundle_it.properties
@@ -22,6 +22,6 @@
 #
 # BugReportHandler
 #
-bugreporthandler.new           = E' stata creata una nuova pagina: {0}
+bugreporthandler.new           = E'' stata creata una nuova pagina: {0}
 bugreporthandler.titlerequired = Titolo obbligatorio!
 bugreporthandler.unable        = Impossibile creare una nuova pagina!
