--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/OSGI-INF/l10n/bundle_de.properties
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/OSGI-INF/l10n/bundle_de.properties
@@ -49,7 +49,7 @@ formclose.noneedtoshow = (form close muss momentan nicht angezeigt werden)
 forminput.namemissing  = Eingabeelement erwartet Parameter 'name'.
 forminput.noneedtoshow = (form input muss momentan nicht angezeigt werden)
 
-formopen.missingparam  = Das Element 'FormOpen' erwartet den Parameter {0}.
+formopen.missingparam  = Das Element ''FormOpen'' erwartet den Parameter {0}.
 formopen.noneedtoshow  = (form open muss momentan nicht angezeigt werden)
 formopen.postorgetonly = Die HTTP-Methode muss entweder 'POST' oder 'GET' sein.
 
