--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/OSGI-INF/l10n/bundle_nl.properties
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/OSGI-INF/l10n/bundle_nl.properties
@@ -39,7 +39,7 @@ formclose.noneedtoshow = (hoef nu geen close te laten zien)
 forminput.namemissing  = Ontbrekende parameter voor invoer element 'name'.
 forminput.noneedtoshow = (hier geen veld invoer nodig)
 
-formopen.missingparam  = Het element 'FormOpen' verwacht de parameter {0}.
+formopen.missingparam  = Het element ''FormOpen'' verwacht de parameter {0}.
 formopen.noneedtoshow  = (form open is hier niet nodig)
 formopen.postorgetonly = De HTTP-methode moet 'POST' of 'GET' zijn.
 
