--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_ru.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_ru.properties
@@ -216,8 +216,8 @@ security.error.fullname.taken           = \u0418\u043C\u044F ''{0}'' \u0443\u043
 security.error.illegalfullname          = \u0418\u043C\u044F &quot;{0}&quot; \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442\u043E
 security.error.illegalloginname         = \u041B\u043E\u0433\u0438\u043D &quot;{0}&quot; \u0437\u0430\u043D\u044F\u0442
 security.error.login.taken              = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0441 \u0438\u043C\u0435\u043D\u0435\u043C ''{0}'' \u0443\u0436\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D.
-security.error.noaccess                 = \u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u043F\u0440\u0430\u0432 \u0434\u043B\u044F \u0432\u0445\u043E\u0434\u0430 \u0432 &#39;{0}&#39;. \u0412\u043E\u0439\u0434\u0438\u0442\u0435 \u0441\u043F\u0435\u0440\u0432\u0430.
-security.error.noaccess.logged          = \u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u043F\u0440\u0430\u0432 \u0434\u043B\u044F \u0432\u0445\u043E\u0434\u0430 \u0432 &#39;{0}&#39;. \u0425\u043E\u0442\u0438\u0442\u0435 \u0437\u0430\u0439\u0442\u0438 \u043F\u043E\u0434 \u0434\u0440\u0443\u0433\u0438\u043C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u043C ?.
+security.error.pageaccess               = \u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u043F\u0440\u0430\u0432 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435 "{0}". \u0421\u043D\u0430\u0447\u0430\u043B\u0430 \u0441\u043B\u0435\u0434\u0443\u0435\u0442 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u0435\u0431\u044F.
+security.error.pageaccess.logged        = \u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435 "{0}". \u0412\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u0432\u043E\u0439\u0442\u0438 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443 \u043A\u0430\u043A \u0434\u0440\u0443\u0433\u043E\u0439 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C?
 security.error.passwordnomatch          = \u041F\u0430\u0440\u043E\u043B\u0438 \u043D\u0435 \u0441\u043E\u0432\u043F\u0430\u0434\u0430\u044E\u0442
 security.error.wrongip                  = \u041F\u043E\u043F\u044B\u0442\u043A\u0430 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438 \u0441 IP \u0430\u0434\u0440\u0435\u0441\u0430, \u043E\u0442\u043B\u0438\u0447\u0438\u043C\u043E\u0433\u043E \u043E\u0442 IP \u0442\u0432\u043E\u0440\u0446\u0430 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -227,7 +227,7 @@ security.user.fullname.invalid          = \u041D\u0435\u0432\u0435\u0440\u043D\u
 security.user.loginname                 = \u041B\u043E\u0433\u0438\u043D
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = (\u043D\u0435\u0442)
 userprofile.noroles  = (\u043D\u0435\u0442)
