--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_zh_CN.properties
@@ -221,8 +221,8 @@ security.error.fullname.taken           = \u62E5\u6709\u76F8\u540C\u540D\u5B57\u
 security.error.illegalfullname          = \u5168\u540D\u201C{0}\u201D\u4E0D\u7B26\u5408\u547D\u540D\u89C4\u8303
 security.error.illegalloginname         = \u767B\u5F55\u540D\u201C{0}\u201D\u4E0D\u7B26\u5408\u547D\u540D\u89C4\u8303
 security.error.login.taken              = \u7528\u6237\u540D\u5B57 {0} \u5DF2\u7ECF\u88AB\u4F7F\u7528\u4E86
-security.error.noaccess                 = \u60A8\u65E0\u6743\u8BBF\u95EE\u201C{0}\u201D\u3002\u8BF7\u5148\u767B\u5F55\u3002
-security.error.noaccess.logged          = \u60A8\u65E0\u6743\u8BBF\u95EE\u201C{0}\u201D\u3002\u662F\u5426\u8981\u4EE5\u5176\u4ED6\u7528\u6237\u7684\u8EAB\u4EFD\u767B\u5F55\uFF1F
+security.error.pageaccess               = \u60A8\u65E0\u6743\u8BBF\u95EE"{0}"\u9875\u9762\u3002 \u5148\u8868\u660E\u4F60\u7684\u8EAB\u4EFD\u3002
+security.error.pageaccess.logged        = \u60A8\u65E0\u6CD5\u8BBF\u95EE"{0}";\u9875\u9762\u3002 \u60A8\u60F3\u4EE5\u5176\u4ED6\u7528\u6237\u8EAB\u4EFD\u767B\u5F55\u5417?
 security.error.passwordnomatch          = \u5BC6\u7801\u4E0D\u5339\u914D
 security.error.wrongip                  = \u5C1D\u8BD5\u4EE5\u5176\u4ED6 IP \u5730\u5740\u53D1\u8D34\u3002
 # These should roughly match whatever is used in default.properties for UserProfile.jsp
@@ -232,7 +232,7 @@ security.user.fullname.invalid          = \u4E0D\u5408\u6CD5\u7684\u7528\u6237\u
 security.user.loginname                 = \u767B\u5F55\u540D
 
 #
-# UserProfileTag
+# WikiTag UserProfile
 #
 userprofile.nogroups = \uFF08\u65E0\uFF09
 userprofile.noroles  = \uFF08\u65E0\uFF09
