add draft pages for edit ACL of page.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Bearbeiten berechtigung
-acl.permission.submit.cancel = Abbrechen
-acl.permission.submit.save   = Speichern berechtigung
+acl.page.permission.delete        = L\u00F6schen sie die berechtigung
+acl.page.permission.edit          = Bearbeiten berechtigung
+acl.page.permission.roles         = Rollen, benutzer. Geben sie die namen ein und trennen sie sie durch eine neue zeile.
+acl.page.permission.submit.cancel = Abbrechen
+acl.page.permission.submit.save   = Speichern berechtigung
 
 #
 # Any actions.
