--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Editar permiso
-acl.permission.submit.cancel = Cancelar
-acl.permission.submit.save   = Guardar permiso
+acl.page.permission.delete        = Eliminar el permiso
+acl.page.permission.edit          = Editar permiso
+acl.page.permission.roles         = Roles, usuarios. Ingrese los nombres, separ\u00E1ndolos con una nueva l\u00EDnea.
+acl.page.permission.submit.cancel = Cancelar
+acl.page.permission.submit.save   = Guardar permiso
 
 #
 # Any actions.
