--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Muokkaa lupa
-acl.permission.submit.cancel = Peruuta
-acl.permission.submit.save   = Tallentaa lupa
+acl.page.permission.delete        = Poista k\u00E4ytt\u00F6oikeus
+acl.page.permission.edit          = Muokkaa lupa
+acl.page.permission.roles         = Roolit, k\u00E4ytt\u00E4j\u00E4t. Kirjoita nimet, erottaen ne uudella rivill\u00E4.
+acl.page.permission.submit.cancel = Peruuta
+acl.page.permission.submit.save   = Tallentaa lupa
 
 #
 # Any actions.
