--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fr.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Editer le permission
-acl.permission.submit.cancel = Abandonner
-acl.permission.submit.save   = Enregistrer permission
+acl.page.permission.delete        = Supprimer l'autorisation
+acl.page.permission.edit          = Editer le permission
+acl.page.permission.roles         = R\u00F4les, utilisateurs. Entrez les noms, en les s\u00E9parant par une nouvelle ligne.
+acl.page.permission.submit.cancel = Abandonner
+acl.page.permission.submit.save   = Enregistrer permission
 
 #
 # Any actions.
