--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Modifica il permesso
-acl.permission.submit.cancel = Annulla
-acl.permission.submit.save   = Salvare permesso
+acl.page.permission.delete        = Elimina l'autorizzazione
+acl.page.permission.edit          = Modifica il permesso
+acl.page.permission.roles         = Ruoli, utenti. Inserisci i nomi, separandoli con una nuova riga.
+acl.page.permission.submit.cancel = Annulla
+acl.page.permission.submit.save   = Salvare permesso
 
 #
 # Any actions.
