--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_nl.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Bewerk toestemming
-acl.permission.submit.cancel = Annuleer
-acl.permission.submit.save   = Opslaan toestemming
+acl.page.permission.delete        = De machtiging verwijderen
+acl.page.permission.edit          = Bewerk toestemming
+acl.page.permission.roles         = Rollen, gebruikers. Voer de namen in en scheid ze met een nieuwe regel.
+acl.page.permission.submit.cancel = Annuleer
+acl.page.permission.submit.save   = Opslaan toestemming
 
 #
 # Any actions.
