--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Editar permiss\u00E3o
-acl.permission.submit.cancel = Cancel
-acl.permission.submit.save   = Salvar permiss\u00E3o
+acl.page.permission.delete        = Excluir a permiss\u00E3o
+acl.page.permission.edit          = Editar permiss\u00E3o
+acl.page.permission.roles         = Fun\u00E7\u00F5es, usu\u00E1rios. Digite os nomes, separando-os com uma nova linha.
+acl.page.permission.submit.cancel = Cancel
+acl.page.permission.submit.save   = Salvar permiss\u00E3o
 
 #
 # Any actions.
