--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = \u7F16\u8F91\u6743\u9650
-acl.permission.submit.cancel = \u53D6\u6D88
-acl.permission.submit.save   = \u4FDD\u5B58\u6743\u9650
+acl.page.permission.delete        = \u5220\u9664\u6743\u9650
+acl.page.permission.edit          = \u7F16\u8F91\u6743\u9650
+acl.page.permission.roles         = \u89D2\u8272\uFF0C\u7528\u6237\u3002 \u8F93\u5165\u540D\u79F0\uFF0C\u7528\u65B0\u884C\u5206\u9694\u5B83\u4EEC\u3002
+acl.page.permission.submit.cancel = \u53D6\u6D88
+acl.page.permission.submit.save   = \u4FDD\u5B58\u6743\u9650
 
 #
 # Any actions.
