revision of the code of "wiki:Link" tag and its use in JSP.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
@@ -548,7 +548,7 @@ upload.title          = {0}: Anhang hinzuf\u00FCgen
 #
 # UserBox.jsp
 #
-userbox.button = Benutzermen\u009F
+userbox.button = Benutzermen
 
 #
 # PageContent.jsp
