--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
@@ -91,6 +91,7 @@ attach.bytes          = tavua
 attach.delete         = Poista
 attach.deleteconfirm  = Varmista, ett\u00E4 haluat oikeasti poistaa liitteen pysyv\u00E4sti!
 attach.list           = Liitelista
+attach.moreinfo       = Info
 attach.moreinfo.title = Liitteen tiedot ja historia
 attach.preview        = Kuvan esikatselu
 attach.tab            = Liitteet
@@ -521,6 +522,11 @@ upload.heading.upload = Lis\u00E4\u00E4 uusi liitetiedosto sivulle {0}
 upload.info           = Lis\u00E4t\u00E4ksesi uuden liitteen t\u00E4lle sivulle, valitse tiedosto ja paina &quot;liit\u00E4&quot;
 upload.submit         = Liit\u00E4
 upload.title          = {0}: Liitetiedoston lis\u00E4ys
+
+#
+# UserBox.jsp
+#
+userbox.button = K\u00E4ytt\u00E4j\u00E4valikko
 
 #
 # PageContent.jsp
