--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
@@ -91,6 +91,7 @@ attach.bytes          = bytes
 attach.delete         = Elimina
 attach.deleteconfirm  = Conferma che vuoi eliminare questo allegato permanentemente!
 attach.list           = Lista allegati
+attach.moreinfo       = Informazione
 attach.moreinfo.title = Informazioni sugli allegati e storia delle versioni
 attach.preview        = Anteprima immagine
 attach.tab            = Allegati
@@ -423,7 +424,7 @@ outcome.step.continue        = Continua
 prefs.acl.info                   = Le liste di controllo di accesso (ACL) o i gruppi Wiki legati alla tua identit&agrave; devono specificare il tuo identificativo o nome wiki. Tu sei anche un membro dei Ruoli e Gruppi menzionati sopra.
 prefs.assertedname               = Nome
 prefs.assertedname.create        = Crea un nuovo profilo utente
-prefs.assertedname.description   = Il tuo nome. Se non hai ancora creato un profilo, puoi dire {0} chi sei &#8216;asserendo&#8217; un identit&agrave; (senza dire bugie ...).  <br /> Attenzione, asserire il tuo nome in questo modo non &egrave; un vero modo di autenticarti perch&egrave; lascia solo un valore in un cookie senza richiedere una password. A seconda delle politiche di sicurezza impostate su questo wiki, potresti avere associati privilegi limitati. {0} se preferisci essere identificato tramite identificativo utente e password.
+prefs.assertedname.description   = Il tuo nome. Se non hai ancora creato un profilo, puoi dire {0} chi sei &#8216;asserendo&#8217; un identit&agrave; (senza dire bugie ...).  <br /> Attenzione, asserire il tuo nome in questo modo non &egrave; un vero modo di autenticarti perch&egrave; lascia solo un valore in un cookie senza richiedere una password. A seconda delle politiche di sicurezza impostate su questo wiki, potresti avere associati privilegi limitati. {1} se preferisci essere identificato tramite identificativo utente e password.
 prefs.clear.description          = In qualche caso, potresti aver bisogno di rimuovere le tue credenziali da questo computer. Seleziona il bottone &#8216;Ripulisci le preferenze&#8217; per farlo. <br /> Attenzione per&ograve;, questa azione rimuove le preferenze permanentemente, e dovrai reimpostarle se necessario.
 prefs.clear.heading              = Ripulisci le preferenze
 prefs.clear.submit               = Ripulisci le preferenze
