--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
@@ -91,6 +91,7 @@ attach.bytes          = bytes
 attach.delete         = Remover
 attach.deleteconfirm  = Por favor confirme que voc\u00EA deseja remover este arquivo permanentemente!
 attach.list           = Lista de anexos
+attach.moreinfo       = Info
 attach.moreinfo.title = Informa\u00E7\u00F5es e hist\u00F3rico de vers\u00E3o do anexo
 attach.preview        = Pr\u00E9-visualiza\u00E7\u00E3o da imagem
 attach.tab            = Anexar
@@ -347,7 +348,7 @@ newgroup.name.description    = Nome do novo grupo.
 #
 prefs.assertedname               = Nome
 prefs.assertedname.create        = Criar um novo perfil de usu\u00E1rio
-prefs.assertedname.description   = Seu nome. Se voc\u00EA ainda n\u00E3o criou um perfil, voc\u00EA pode falar {0} quem voc\u00EA \u00E9 &#8216;informando&#8217; uma identidade. Voc\u00EA n\u00E3o mentiria para gente, n\u00E3o \u00E9? <br /> Note que ajustar seu nome de usu\u00E1rio dessa forma n\u00E3o \u00E9 o m\u00E9todo real de autentica\u00E7\u00E3o, porque isso ir\u00E1 somente ajustar um cookie no seu navegador sem exigir uma senha. Dependendo da pol\u00EDtica de seguran\u00E7a, a wiki poder\u00E1 lhe permitir alguns privil\u00E9gios como usu\u00E1rio &#8220;informado&#8221;. {0} se preferir um nome de usu\u00E1rio e senha tradicionais, que s\u00E3o mais seguros.
+prefs.assertedname.description   = Seu nome. Se voc\u00EA ainda n\u00E3o criou um perfil, voc\u00EA pode falar {0} quem voc\u00EA \u00E9 &#8216;informando&#8217; uma identidade. Voc\u00EA n\u00E3o mentiria para gente, n\u00E3o \u00E9? <br /> Note que ajustar seu nome de usu\u00E1rio dessa forma n\u00E3o \u00E9 o m\u00E9todo real de autentica\u00E7\u00E3o, porque isso ir\u00E1 somente ajustar um cookie no seu navegador sem exigir uma senha. Dependendo da pol\u00EDtica de seguran\u00E7a, a wiki poder\u00E1 lhe permitir alguns privil\u00E9gios como usu\u00E1rio &#8220;informado&#8221;. {1} se preferir um nome de usu\u00E1rio e senha tradicionais, que s\u00E3o mais seguros.
 prefs.clear.description          = Em alguns casos voc\u00EA precisa remover seu nome de usu\u00E1rio &#8216;escolhido&#8217; e suas prefer\u00EAncias desse computador. Clique em &#8216;Limpar prefer\u00EAncias de usu\u00E1rio&#8217; para proseguir. <br /> Note que isso ir\u00E1 remover todas as suas prefer\u00EAncias, permanentemente. Voc\u00EA ir\u00E1 precisar inform\u00E1-las novamente.
 prefs.clear.heading              = Limpar prefer\u00EAncias de usu\u00E1rio
 prefs.clear.submit               = Limpar prefer\u00EAncias de usu\u00E1rio
@@ -404,6 +405,11 @@ scope.save.submit      = Set Scope
 scope.selection.cancel = Cancel
 scope.selection.ok     = Select topics
 scope.show.topics      = Displayed topics
+
+#
+# UserBox.jsp
+#
+userbox.button = Menu Do Usu\u00E1rio
 
 #
 # PageContent.jsp
