--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
@@ -91,6 +91,7 @@ attach.bytes          = \u5B57\u8282
 attach.delete         = \u5220\u9664
 attach.deleteconfirm  = \u8BF7\u786E\u8BA4\u662F\u5426\u8981\u6C38\u4E45\u5220\u9664\u6B64\u9644\u4EF6\uFF01
 attach.list           = \u9644\u4EF6\u5217\u8868
+attach.moreinfo       = \u8D44\u6599
 attach.moreinfo.title = \u9644\u4EF6\u9644\u4EF6\u548C\u7248\u672C\u5386\u53F2\u8BB0\u5F55
 attach.preview        = \u56FE\u50CF\u9884\u89C8
 attach.tab            = \u9644\u4EF6
@@ -418,7 +419,7 @@ outcome.step.continue        = \u7EE7\u7EED
 prefs.acl.info                   = \u5305\u542B\u60A8\u7684\u6807\u8BC6\u7684\u8BBF\u95EE\u63A7\u5236\u8868\u6216 Wiki \u7EC4\u5E94\u8BE5\u6307\u5B9A\u60A8\u7684\u540D\u79F0\u6216 Wiki \u540D\u79F0\u3002\u60A8\u4E5F\u662F\u4EE5\u4E0A\u89D2\u8272\u548C\u7EC4\u7684\u6210\u5458\u3002
 prefs.assertedname               = \u540D\u5B57
 prefs.assertedname.create        = \u521B\u5EFA\u65B0\u7528\u6237\u4FE1\u606F
-prefs.assertedname.description   = \u60A8\u7684\u59D3\u540D\u3002\u5982\u679C\u8FD8\u672A\u521B\u5EFA\u7528\u6237\u6982\u8981\u4FE1\u606F\uFF0C\u60A8\u53EF\u4EE5\u544A\u8BC9 {0} \u60A8\u7684\u540D\u5B57\u6765\u201C\u58F0\u660E\u201D\u81EA\u5DF1\u7684\u8EAB\u4EFD\u3002\u8BF7\u4E0D\u8981\u6B3A\u9A97\u6211\u4EEC\u3002<br />\u6CE8\u610F\uFF1A\u4EE5\u8FD9\u79CD\u65B9\u6CD5\u8BBE\u7F6E\u7684\u540D\u79F0\u4E0D\u662F\u4E00\u79CD\u771F\u6B63\u7684\u9A8C\u8BC1\u65B9\u6CD5\uFF0C\u56E0\u4E3A\u5B83\u53EA\u662F\u5728\u60A8\u7684\u6D4F\u89C8\u5668\u4E2D\u8BBE\u7F6E\u4E86\u4E00\u4E2A\u4E0D\u8981\u5BC6\u7801\u7684 cookie\u3002\u6839\u636E\u5B89\u5168\u7B56\u7565\uFF0CWiki \u4F1A\u7ED9\u8D4B\u4E88\u60A8\u4E00\u4E9B\u4F5C\u4E3A\u201C\u58F0\u660E\u201D\u7528\u6237\u7684\u6743\u9650\u3002{0} \u5982\u679C\u8981\u4F7F\u7528\u4F20\u7EDF\u7684\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF0C\u8FD9\u9700\u8981\u66F4\u591A\u5B89\u5168\u6027\u3002
+prefs.assertedname.description   = \u60A8\u7684\u59D3\u540D\u3002\u5982\u679C\u8FD8\u672A\u521B\u5EFA\u7528\u6237\u6982\u8981\u4FE1\u606F\uFF0C\u60A8\u53EF\u4EE5\u544A\u8BC9 {0} \u60A8\u7684\u540D\u5B57\u6765\u201C\u58F0\u660E\u201D\u81EA\u5DF1\u7684\u8EAB\u4EFD\u3002\u8BF7\u4E0D\u8981\u6B3A\u9A97\u6211\u4EEC\u3002<br />\u6CE8\u610F\uFF1A\u4EE5\u8FD9\u79CD\u65B9\u6CD5\u8BBE\u7F6E\u7684\u540D\u79F0\u4E0D\u662F\u4E00\u79CD\u771F\u6B63\u7684\u9A8C\u8BC1\u65B9\u6CD5\uFF0C\u56E0\u4E3A\u5B83\u53EA\u662F\u5728\u60A8\u7684\u6D4F\u89C8\u5668\u4E2D\u8BBE\u7F6E\u4E86\u4E00\u4E2A\u4E0D\u8981\u5BC6\u7801\u7684 cookie\u3002\u6839\u636E\u5B89\u5168\u7B56\u7565\uFF0CWiki \u4F1A\u7ED9\u8D4B\u4E88\u60A8\u4E00\u4E9B\u4F5C\u4E3A\u201C\u58F0\u660E\u201D\u7528\u6237\u7684\u6743\u9650\u3002{1} \u5982\u679C\u8981\u4F7F\u7528\u4F20\u7EDF\u7684\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF0C\u8FD9\u9700\u8981\u66F4\u591A\u5B89\u5168\u6027\u3002
 prefs.clear.description          = \u5728\u67D0\u4E9B\u60C5\u51B5\u4E0B\uFF0C\u60A8\u53EF\u80FD\u9700\u8981\u4ECE\u8BA1\u7B97\u673A\u5220\u9664\u201Casserted\u201D\u7528\u6237\u540D\u548C\u7528\u6237\u9996\u9009\u9879\u3002\u8981\u8FD9\u6837\u505A\uFF0C\u8BF7\u5355\u51FB\u201C\u6E05\u9664\u7528\u6237\u9996\u9009\u9879\u201D\u6309\u94AE\u3002<br />\u6CE8\u610F\uFF0C\u8FD9\u5C06\u6C38\u8FDC\u5220\u9664\u60A8\u6240\u8BBE\u7F6E\u7684\u6240\u6709\u7528\u6237\u9996\u9009\u9879\u3002\u60A8\u9700\u8981\u91CD\u65B0\u8F93\u5165\u8FD9\u4E9B\u4FE1\u606F\u3002
 prefs.clear.heading              = \u6E05\u9664\u7528\u6237\u9996\u9009\u9879
 prefs.clear.submit               = \u6E05\u9664\u7528\u6237\u9996\u9009\u9879
@@ -517,6 +518,11 @@ upload.heading.upload = \u5C06\u65B0\u9644\u4EF6\u4E0A\u4F20\u5230 {0}
 upload.info           = \u8981\u5411\u8BE5\u9875\u9762\u6DFB\u52A0\u65B0\u9644\u4EF6\uFF0C\u8BF7\u7528\u4E0B\u9762\u7684\u6846\u627E\u5230\u6587\u4EF6\uFF0C\u7136\u540E\u5355\u51FB\u201C\u4E0A\u4F20\u201D\u3002
 upload.submit         = \u4E0A\u4F20
 upload.title          = {0}\uFF1A\u6DFB\u52A0\u9644\u4EF6
+
+#
+# UserBox.jsp
+#
+userbox.button = \u7528\u6237\u83DC\u5355
 
 #
 # PageContent.jsp
